--- a/Prueba/Web.config
+++ b/Prueba/Web.config
@@ -7,7 +7,7 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="PruebaBanco.My.MySettings.conexion" connectionString="Data Source=guamal.subastar.com.co\SQLEXPRESS;Initial Catalog=PRUEBA;User ID=sa;Password=51573m4.464"
+    <add name="PruebaBanco.My.MySettings.conexion" connectionString="Data Source=;Initial Catalog=;User ID=sa;Password="
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
