--- a/Prueba/PruebaBanco.vbproj
+++ b/Prueba/PruebaBanco.vbproj
@@ -106,9 +106,11 @@
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\crud.js" />
+    <Content Include="js\crudmov.js" />
     <Content Include="js\jquery-3.5.1.min.js" />
     <Content Include="js\notie.min.js" />
     <Content Include="js\sweetalert2.all.min.js" />
+    <Content Include="movimientos.aspx" />
     <Content Include="usuario.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -120,6 +122,13 @@
     <Compile Include="consultas.aspx.vb">
       <DependentUpon>consultas.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="movimientos.aspx.designer.vb">
+      <DependentUpon>movimientos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="movimientos.aspx.vb">
+      <DependentUpon>movimientos.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
