--- a/Prueba/PruebaBanco.vbproj
+++ b/Prueba/PruebaBanco.vbproj
@@ -92,6 +92,7 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BD.sql" />
     <Content Include="consultas.aspx" />
     <Content Include="css\bootstrap-grid.css" />
     <Content Include="css\bootstrap-grid.min.css" />
